--- a/Problem Set 1.ipynb
+++ b/Problem Set 1.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1eb63202",
+   "metadata": {},
+   "source": [
+    "# Question 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c73f91b1",
    "metadata": {},
    "source": [
