--- a/Problem Set 1.ipynb
+++ b/Problem Set 1.ipynb
@@ -171,7 +171,8 @@
     "    {    \n",
     "        public double triangleArea(int side1, int side2, int side3) {   \n",
     "            double area;    \n",
-    "            double s = (side1+side2 +side3) / 2;    \n",
+    "            double s = (side1+side2 +side3) / 2;  \n",
+    "            // referred StackOverflow to get the sqrt method https://www.geeksforgeeks.org/c-sharp-math-sqrt-method/   \n",
     "            area = Math.Sqrt(s * (s - side1) * (s - side2) * (s - side3));    \n",
     "            return area;    \n",
     "        }    \n",
@@ -222,7 +223,8 @@
     "        {  \n",
     "\n",
     "            Console.WriteLine($\"Enter {numberOfElements} elements in the array:\");  \n",
-    "            // Creating arraylist to store the numbers   \n",
+    "            // Creating arraylist to store the numbers \n",
+    "            // Referred https://www.c-sharpcorner.com/article/c-sharp-list/ for lists\n",
     "            List<int> array = new List<int>();    \n",
     "            List<int> evenArray = new List<int>();  \n",
     "            List<int> oddArray = new List<int>(); \n",
@@ -674,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "fbb12f12",
    "metadata": {},
    "outputs": [
@@ -691,6 +693,11 @@
     }
    ],
    "source": [
+    "# from my memory, I had solved similar problem on Cracking the Coding interview by Gayle McDowell where we get the index   \n",
+    "# of the character in the frequency table to modify the count of the actual character.   \n",
+    "# i.e subtracting the ASCII value of actual character with 'a' to get the index of that particular alphabet  \n",
+    "\n",
+    "\n",
     "table1 = frequencies('The quick red fox got bored and went home.')\n",
     "print(\">>> frequencies('The quick red fox got bored and went home.' \\n\",table1)\n",
     "table2 = frequencies('apple')\n",
@@ -698,9 +705,10 @@
     "\n",
     "def frequencies(sentence):\n",
     "    # initialise the frequency table \n",
-    "    frequencyTable = [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]\n",
+    "    # frequencyTable = [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]\n",
+    "    frequencyTable = [0] * 26\n",
     "    for char in sentence:\n",
-    "        # We will get the index of the alphabet and we can increment accordingly   \n",
+    "        # We will get the index of the alphabet by subtracting the ASCII value of character with 'a' and we can increment accordingly   \n",
     "        intVal = ord(char) - ord('a')\n",
     "        # check if the val is >=0 and increment the values, as blank space will give a negative value and that might lead to error   \n",
     "        if(intVal>=0):\n",
